samples/_failures_safe/1761327666_0ad6ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fd24f49.c: In function ‘main’:
./samples/SAFE/__tmp_0fd24f49.c:161:13: error: expected ‘)’ at end of input
  161 |     while (1
      |           ~ ^
      |             )
./samples/SAFE/__tmp_0fd24f49.c:161:5: error: expected declaration or statement at end of input
  161 |     while (1
      |     ^~~~~
